--- a/src/main/webapp/static-files/login-app/app-view/Company_AccountView.html
+++ b/src/main/webapp/static-files/login-app/app-view/Company_AccountView.html
@@ -11,10 +11,9 @@
 	    animation-duration: 2s;
 	}
 </style>
-<div id="idError" class="alert alert-danger">{{vm.error}}</div>
+<img style="position: absolute;z-index: -1;top:-56px;" draggable="false" src="static-files/images/companyAccountBackground.jpg" alt="Could not locate image.">
 <div style="height:25%"></div>
 <div class="col-md-12" > 
-    
     <span class="col-md-5 col-md-offset-1" ng-include="'/ModelViewer/static-files/login-app/app-view/Company_AccountSubViews/Company_ProjectMemberView.html'">
     	
     </span>
