--- a/src/main/webapp/static-files/login-app/app-view/Company_LoginView.html
+++ b/src/main/webapp/static-files/login-app/app-view/Company_LoginView.html
@@ -12,7 +12,7 @@
 	<div >
 	    <h2>Company Login</h2>
 	    <div ng-show="vm.error" class="alert alert-danger">{{vm.error}}</div>
-	    <form name="form" ng-submit="vm.login()" role="form">
+	    <form name="form" ng-submit="vm.login(vm.username, vm.password)" role="form">
 	        <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && (form.username.$error.required || form.username.$error.pattern || form.username.$error.minlength || form.username.$error.maxlength)}">
 	            <label>Company Name</label>
 	            <input type="text" name="username" class="form-control" ng-model="vm.username" 
