fixed issue with members not being returned, it was that the varible was not being accessed in the models, resulted in hibernate not populating it, this was in combination with depth limiter- which needs to be added back in later-

--- a/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_MemberView.html
+++ b/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_MemberView.html
@@ -38,10 +38,10 @@
 		<!-- repeat for all members -->	 	
 		<div class = "btn-group-vertical" style="width:100%">						
 			
-			<div ng-repeat="member in vm.members" class="animate-repeat" >
+			<div ng-repeat="member in vm.memberService.service.data" class="animate-repeat" >
 				<div class="input-group" style="padding:2px">
 					<input type="text" class="form-control" style="background-color:transparent;cursor: default;" 
-						id="exampleInputAmount" placeholder="{{member}}" 
+						id="exampleInputAmount" placeholder="{{member.memberName}}" 
 						ng-bind="member" readonly>
 					<span class="input-group-btn">
 					    <button type = "button" 
