changed navbar to be a directive. Added a settings and notification button to the nav

--- a/src/main/webapp/static-files/login-app/app-view/Company_AccountView.html
+++ b/src/main/webapp/static-files/login-app/app-view/Company_AccountView.html
@@ -12,6 +12,7 @@
 	}
 </style>
 <img style="position: absolute;z-index: -1;top:-56px;" draggable="false" src="static-files/images/companyAccountBackground.jpg" alt="Could not locate image.">
+<nav-directive sm=true st=true srb=true scl=true sn=true ss=true></nav-directive>
 <div style="height:25%"></div>
 <div class="col-md-12" > 
     <span class="col-md-5 col-md-offset-1" ng-include="'/ModelViewer/static-files/login-app/app-view/Company_AccountSubViews/Company_ProjectMemberView.html'">
