added github module

--- a/src/main/webapp/static-files/common-view/HomeView.html
+++ b/src/main/webapp/static-files/common-view/HomeView.html
@@ -1,5 +1,5 @@
 
-<nav-directive sm=false st=true srb=true scl=true sn=false ss=false></nav-directive>
+<nav-directive sm=false st=true srb=true scl=true sn=false ss=false lo=false></nav-directive>
 <div  style="height:25%"></div>
 <div class="col-md-12" > 
     <div class="pagination-centered">
